--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x5d0d8e2224749618c582bc3f2c6e291","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xcc5ad687f524dbfb399fd74caf2faea","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -39,7 +39,7 @@
 class: inverse, center, middle
 
 # Fonology
-## An R package for phonological analysis
+## Phonological Analysis in R
 ### Guilherme D. Garcia
 
 &lt;img src="ULaval2.png" alt="Université Laval" style="width:7%"&gt;
