--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x492a4cbe5cb44f9895691faae446472","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"c171fd286f644c1ea8e351fc9f047118","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -28,6 +28,15 @@
     <link href="libs/xaringanExtra-extra-styles/xaringanExtra-extra-styles.css" rel="stylesheet" />
     <script src="libs/kePrint/kePrint.js"></script>
     <link href="libs/lightable/lightable.css" rel="stylesheet" />
+    <script src="libs/htmlwidgets/htmlwidgets.js"></script>
+    <link href="libs/datatables-css/datatables-crosstalk.css" rel="stylesheet" />
+    <script src="libs/datatables-binding/datatables.js"></script>
+    <script src="libs/jquery/jquery-3.6.0.min.js"></script>
+    <link href="libs/dt-core/css/jquery.dataTables.min.css" rel="stylesheet" />
+    <link href="libs/dt-core/css/jquery.dataTables.extra.css" rel="stylesheet" />
+    <script src="libs/dt-core/js/jquery.dataTables.min.js"></script>
+    <link href="libs/crosstalk/css/crosstalk.min.css" rel="stylesheet" />
+    <script src="libs/crosstalk/js/crosstalk.min.js"></script>
     <link rel="stylesheet" href="myStyles.css" type="text/css" />
   </head>
   <body>
@@ -183,7 +192,7 @@ ipa_pt("tipos")
 ipa_pt("quiséssemos")
 #&gt; [1] "ki.ˈzɛ.se.mos"
 ipa_pt("parangaricutirrimirruaro")
-#&gt; [1] "pa.ɾan.ga.ɾi.ku.ti.xi.mi.xu.ˈa.ɾo"
+#&gt; [1] "pa.ɾan.ga.ɾi.ku.ti.xi.mi.ˈxu.a.ɾo"
 ```
 
 --
@@ -350,79 +359,23 @@ lus2 = lus1 |&gt;
 
 ## Example 6: from long text to tibble 📚
 
-&lt;table class="table" style="margin-left: auto; margin-right: auto;"&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:left;"&gt; word &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; ipa &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; stress &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; finSyl &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; onsetFin &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; nucFin &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; codaFin &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; rhFin &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; armas &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; ˈaɾ.mas &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; penult &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; mas &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; m &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; a &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; s &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; as &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; barões &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; ba.ˈɾõj̃s &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; final &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; ɾõj̃s &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; ɾ &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; õj̃ &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; s &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; õj̃s &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; assinalados &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; a.si.na.ˈla.dos &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; penult &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; dos &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; d &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; o &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; s &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; os &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; ocidental &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; o.si.den.ˈtal &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; final &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; tal &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; t &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; a &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; l &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; al &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; praia &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; ˈpɾa.ja &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; penult &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; ja &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; ja &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; ja &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
+<div class="datatables html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-0fba151de585fa62e1b6" style="width:100%;height:auto;"></div>
+<script type="application/json" data-for="htmlwidget-0fba151de585fa62e1b6">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10"],["armas","barões","assinalados","ocidental","praia","lusitana","mares","nunca","antes","navegados"],["ˈaɾ.mas","ba.ˈɾõj̃s","a.si.na.ˈla.dos","o.si.den.ˈtal","ˈpɾa.ja","lu.zi.ˈta.na","ˈma.ɾes","ˈnun.ka","ˈan.tes","na.ve.ˈga.dos"],["penult","final","penult","final","penult","penult","penult","penult","penult","penult"],["mas","ɾõj̃s","dos","tal","ja","na","ɾes","ka","tes","dos"],["m","ɾ","d","t",null,"n","ɾ","k","t","d"],["a","õj̃","o","a","ja","a","e","a","e","o"],["s","s","s","l",null,null,"s",null,"s","s"],["as","õj̃s","os","al","ja","a","es","a","es","os"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>word<\/th>\n      <th>ipa<\/th>\n      <th>stress<\/th>\n      <th>finSyl<\/th>\n      <th>onsetFin<\/th>\n      <th>nucFin<\/th>\n      <th>codaFin<\/th>\n      <th>rhFin<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":5,"lengthMenu":[5],"columnDefs":[{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
---
 
 - Total number of lexical words: 32618 (⏱️ total time to run code above: **&lt; 2s**)
-- Should we count glides as onsets, ocdas... nuclei❓ 
 
---
+---
+
+## Example 6: from long text to tibble 📚
+
+
+```r
+"praia" |&gt; ipa() |&gt; getSyl(pos = 1) |&gt; syllable(const = "nucleus")
+#&gt; [1] "ja"
+```
+
+- Should we count glides as onsets, codas... nuclei❓ 
 
 &lt;div align = "center"&gt;
 &lt;img src="syllable.png" alt="syllable" style="width:80%;"&gt;
@@ -478,7 +431,7 @@ syllables |&gt;
 * plotSon(syl = F)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-14-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 --
@@ -492,7 +445,7 @@ syllables |&gt;
 * plotSon(syl = T)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-14-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -510,7 +463,7 @@ plotVowels(lg = "Spanish",
 *          tex = F)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-16-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 --
@@ -523,7 +476,7 @@ plotVowels(lg = "Italian",
 *          tex = F)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-16-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-17-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -771,7 +724,7 @@ lus_bigramas |&gt;
 * plotnGrams(type = "lollipop", n = 10)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-25-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-26-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 --
@@ -783,7 +736,7 @@ lus_bigramas |&gt;
 * plotnGrams(type = "heat", n = 50)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-26-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-27-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -801,7 +754,7 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
   theme_classic() + theme(legend.position = "none")
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-27-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-28-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -817,7 +770,7 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 * formants()
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-28-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-29-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -829,7 +782,7 @@ ipa("obrigado") |&gt;
   plotSon(syl = T)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-29-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-30-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 This project has benefitted from the ENVOL program (Université Laval). More info at [gdgarcia.ca/fonology](https://gdgarcia.ca/fonology)
     </textarea>
