--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x368a840f725436180b168f018d6559a","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x30347f8decf4b1cb3d5126f44fc0a56","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -321,11 +321,25 @@ d = tibble(word = text |&gt; cleanText()) |&gt; # Words
 
 ## Example 6: from long text to tibble 📚
 
+### Tarefa
+
+1. Import *Os Lusíadas*, clean and tokenize text
+2. Transcribe, syllabify, stress lexical words
+3. Extract stress and final syllable
+4. Extract final syllable constituents
+
+--
+
 - `getStress()`: extracts stress from transcription
 - `getWeight()`: extracts weight profile (e.g., `LLH`)
 - `getSyl()`: extracts a given syllable
+- `syllable()`: extracts syllabic constituents
 - `stopwords_pt` and `stopwords_sp`: stopwords in (adapted from `tm` package)
-- &lt;mark&gt;`syllable()`&lt;/mark&gt;: extracts syllabic constituents
+
+
+---
+
+## Example 6: from long text to tibble 📚
 
 
 ```r
@@ -338,11 +352,12 @@ lus2 = lus1 |&gt;
   filter(!word %in% stopwords_pt) |&gt; # stopword removal
   mutate(ipa = ipa(word), # column for transcription
          stress = getStress(ipa), # column for stress
+         weight = getWeight(ipa), # outra para o peso
          finSyl = getSyl(word = ipa, pos = 1), # column for final syllable
-*        onsetFin = syllable(finSyl, const = "onset"),
-*        nucFin = syllable(finSyl, const = "nucleus"),
-*        codaFin = syllable(finSyl, const = "coda"),
-*        rhFin = syllable(finSyl, const = "rhyme"))
+         onsetFin = syllable(finSyl, const = "onset"),
+         nucFin = syllable(finSyl, const = "nucleus"),
+         codaFin = syllable(finSyl, const = "coda"),
+         rhFin = syllable(finSyl, const = "rhyme"))
 ```
 
 
@@ -356,6 +371,7 @@ lus2 = lus1 |&gt;
    &lt;th style="text-align:left;"&gt; word &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; ipa &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; stress &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; weight &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; finSyl &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; onsetFin &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; nucFin &lt;/th&gt;
@@ -368,6 +384,7 @@ lus2 = lus1 |&gt;
    &lt;td style="text-align:left;"&gt; armas &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; ˈaɾ.mas &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; penult &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; HH &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; mas &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; m &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; a &lt;/td&gt;
@@ -378,6 +395,7 @@ lus2 = lus1 |&gt;
    &lt;td style="text-align:left;"&gt; barões &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; ba.ˈɾõj̃s &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; final &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; LH &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; ɾõj̃s &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; ɾ &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; õj̃ &lt;/td&gt;
@@ -388,6 +406,7 @@ lus2 = lus1 |&gt;
    &lt;td style="text-align:left;"&gt; assinalados &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; a.si.na.ˈla.dos &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; penult &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; LLH &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; dos &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; d &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; o &lt;/td&gt;
@@ -398,6 +417,7 @@ lus2 = lus1 |&gt;
    &lt;td style="text-align:left;"&gt; ocidental &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; o.si.den.ˈtal &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; final &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; LHH &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; tal &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; t &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; a &lt;/td&gt;
@@ -408,6 +428,7 @@ lus2 = lus1 |&gt;
    &lt;td style="text-align:left;"&gt; praia &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; ˈpɾa.ja &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; penult &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; LL &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; ja &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; ja &lt;/td&gt;
@@ -420,15 +441,7 @@ lus2 = lus1 |&gt;
 
 - Total number of lexical words: 32618 (⏱️ total time to run code above: **&lt; 2s**)
 
----
-
-## Example 6: from long text to tibble 📚
-
-
-```r
-"praia" |&gt; ipa() |&gt; getSyl(pos = 1) |&gt; syllable(const = "nucleus")
-#&gt; [1] "ja"
-```
+--
 
 - Should we count glides as onsets, codas... nuclei❓ 
 
@@ -486,7 +499,7 @@ syllables |&gt;
 * plotSon(syl = F)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-14-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 --
@@ -500,7 +513,7 @@ syllables |&gt;
 * plotSon(syl = T)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-14-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -518,7 +531,7 @@ plotVowels(lg = "Spanish",
 *          tex = F)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-16-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 --
@@ -531,7 +544,7 @@ plotVowels(lg = "Italian",
 *          tex = F)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-17-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-16-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -779,7 +792,7 @@ lus_bigramas |&gt;
 * plotnGrams(type = "lollipop", n = 10)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-26-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-25-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 --
@@ -791,7 +804,7 @@ lus_bigramas |&gt;
 * plotnGrams(type = "heat", n = 50)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-27-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-26-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -809,7 +822,7 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
   theme_classic() + theme(legend.position = "none")
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-28-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-27-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -825,7 +838,7 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 * formants()
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-29-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-28-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -837,7 +850,7 @@ ipa("obrigado") |&gt;
   plotSon(syl = T)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-30-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-29-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 This project has benefitted from the ENVOL program (Université Laval). More info at [gdgarcia.ca/fonology](https://gdgarcia.ca/fonology)
     </textarea>
