--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x30347f8decf4b1cb3d5126f44fc0a56","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x73a26d214754788b67560a3a1a1df47","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -842,6 +842,33 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 
 ---
 
+## Example 14: from IPA to TIPA
+
+- If you use `\(\LaTeX\)`, `tipa` is essential
+- The function `ipa2tipa()` translates an IPA sequence into `tipa`:
+
+--
+
+
+```r
+"Aqui está uma frase que desejo transcrever fonemicamente" |&gt; 
+  cleanText() |&gt; 
+  ipa(narrow = T) |&gt; 
+  ipa2tipa(pre = "[ ", post = " ]")
+#&gt; Done! Here's your tex code using TIPA:
+#&gt; \textipa{ [ a."ki es."ta "u.m5 "fRa.zI "ke de."ze.ZU {""}tR\~{a}ns.kRe."veR {""}fo.ne.{""}mi.ka."m\~{e}\~{j}{\textltailn}.\t{tS}{\r*{I}} ] }
+```
+
+--
+
+&lt;br&gt;
+
+&lt;div align="center"&gt;
+&lt;img src="tipa.png" alt="Ouput tipa" style="width:100%"&gt;
+&lt;/div&gt;
+---
+
+
 # The end
 
 
@@ -850,7 +877,7 @@ ipa("obrigado") |&gt;
   plotSon(syl = T)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-29-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-30-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 This project has benefitted from the ENVOL program (Université Laval). More info at [gdgarcia.ca/fonology](https://gdgarcia.ca/fonology)
     </textarea>
