--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x73a26d214754788b67560a3a1a1df47","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2391741d97843dc93ed794863cc7fd1","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -141,6 +141,9 @@ install_github("guilhermegarcia/fonology")
 --
 
 7. Vowel formants + `ggplot2` (simple *wrapper*)
+--
+
+8. From IPA to TIPA
 
 
 --
