--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2391741d97843dc93ed794863cc7fd1","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"c5df4c2448fa44b4bf8aad973093de2a","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -209,7 +209,7 @@ ipa_pt("tipos", narrow = T)
 ipa_pt("quiséssemos", narrow = T)
 #&gt; [1] "ki.ˈzɛ.se.mʊs"
 ipa_pt("parangaricutirrimirruaro", narrow = T)
-#&gt; [1] "pa.ˌɾãŋ.ga.ˌɾi.ku.ˌt͡ʃi.xi.ˌmi.xu.ˈa.ɾʊ"
+#&gt; [1] "ˌpa.ɾãŋ.ˌga.ɾi.ˌku.t͡ʃi.ˌxi.mi.ˈxu.a.ɾʊ"
 ```
 
 - **Not vectorized** (i.e., serial): ideal for *one* input
@@ -346,17 +346,17 @@ d = tibble(word = text |&gt; cleanText()) |&gt; # Words
 
 
 ```r
-lus1 = read_lines("lusiadas.txt") # "Os Lusíadas" text
+lus1 = read_lines("lusiadas.txt")                        # "Os Lusíadas" text
 
 lus2 = lus1 |&gt; 
-  cleanText() |&gt; # data cleaning + tokenization
+  cleanText() |&gt;                                         # data cleaning + tokenization
   as_tibble() |&gt; 
   rename(word = value) |&gt; 
-  filter(!word %in% stopwords_pt) |&gt; # stopword removal
-  mutate(ipa = ipa(word), # column for transcription
-         stress = getStress(ipa), # column for stress
-         weight = getWeight(ipa), # outra para o peso
-         finSyl = getSyl(word = ipa, pos = 1), # column for final syllable
+  filter(!word %in% stopwords_pt) |&gt;                     # stopword removal
+  mutate(ipa = ipa(word),                                # column for transcription
+         stress = getStress(ipa),                        # column for stress
+         weight = getWeight(ipa),                        # outra para o peso
+         finSyl = getSyl(word = ipa, pos = 1),           # column for final syllable
          onsetFin = syllable(finSyl, const = "onset"),
          nucFin = syllable(finSyl, const = "nucleus"),
          codaFin = syllable(finSyl, const = "coda"),
