--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x74c3e39e6444da08572e351a43e5066","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xd2e7fda80214c2cbe7b25b40b5e9475","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -48,7 +48,7 @@ class: inverse, center, middle
 &lt;img src="ULaval2.png" alt="Université Laval" style="width:7%"&gt;
 
 
-#### Université Laval • CRBLM
+#### Université Laval • Centre for Research on Brain, Language &amp; Music
 
 ---
 
