--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x22329b6262c49aba19db4d8c46e9f38","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"efb079ce873d4f5ebc00da25ab8733e3","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -117,7 +117,7 @@ install_github("guilhermegarcia/fonology")
 
 ---
 
-## Road map
+## Road map 🗺️
 
 ### Demo of main functions:
 
@@ -438,7 +438,7 @@ lus2 = lus1 |&gt;
 &lt;/table&gt;
 
 
-- Total number of lexical words: 32618 (⏱️ total time to run code above: **&lt; 2s**)
+- Total number of lexical words: 32618 (⏳ **&lt; 2s**)
 
 --
 
@@ -841,7 +841,7 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 
 ---
 
-## Example 14: from IPA to TIPA
+## Example 14: from IPA to TIPA ✏️
 
 - If you use `\(\LaTeX\)`, `tipa` is essential
 - The function `ipa2tipa()` translates an IPA sequence into `tipa`:
@@ -868,7 +868,7 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 ---
 
 
-# Questions?
+# Questions? 😶‍🌫️
 
 
 ```r
