--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"efb079ce873d4f5ebc00da25ab8733e3","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x4f2cb25bb7740e8924b372017a2663f","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -806,7 +806,20 @@ lus_bigramas |&gt;
 &lt;img src="index_files/figure-html/unnamed-chunk-26-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
+
 ---
+
+## Example 12: Visualizing bigrams 🎲
+
+- Network with top 50 bigrams from *Os Lusiádas* with `networkD3` (excluding `#`)
+
+&lt;br&gt;
+
+<div class="iframe-container">
+<iframe src="my_network.html" height="450" width="70%" class="d3-figure"></iframe>
+</div>
+---
+
 
 
 
@@ -821,7 +834,7 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
   theme_classic() + theme(legend.position = "none")
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-27-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-28-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -837,7 +850,7 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 * formants()
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-28-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-29-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -876,7 +889,7 @@ ipa("obrigado") |&gt;
   plotSon(syl = T)
 ```
 
-&lt;img src="index_files/figure-html/unnamed-chunk-30-1.png" height="300px" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-31-1.png" height="300px" style="display: block; margin: auto;" /&gt;
 
 - This project has benefitted from the ENVOL program (Université Laval)
     </textarea>
