--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x4f2cb25bb7740e8924b372017a2663f","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xfba56574008407a88b902e72701292e","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -44,7 +44,7 @@ class: inverse, center, middle
 &lt;img src="ULaval2.png" alt="Université Laval" style="width:7%"&gt;
 
 
-#### Université Laval • Centre for Research on Brain, Language &amp; Music
+#### Université Laval • Centre for Research on Brain, Language &amp; Music (CRBLM)
 
 ---
 
@@ -182,7 +182,7 @@ ipa_pt("tipos")
 ipa_pt("quiséssemos")
 #&gt; [1] "ki.ˈzɛ.se.mos"
 ipa_pt("parangaricutirrimirruaro")
-#&gt; [1] "pa.ɾan.ga.ɾi.ku.ti.xi.mi.xu.ˈa.ɾo"
+#&gt; [1] "pa.ɾan.ga.ɾi.ku.ti.xi.mi.ˈxu.a.ɾo"
 ```
 
 --
