--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"b4b849b3eaec4a7e9283d83d51bf2cce","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x78b712b9edb4d3ebaa67f872091ec88","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -34,7 +34,7 @@
 
 
 
-class: inverse, center, middle
+class: title-slide, inverse, center, middle
 
 # Fonology
 ## Phonological Analysis in R
